assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lora&family=Poppins:wght@100;300;400;600;700&display=swap');

html {
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border: none;
}
body {
	width: 100%;
	font-family: 'Poppins', sans-serif;
  height: 100vh;
	margin: 0;
	overflow-x: hidden;
}

/* Navagation and Header */
.header {
  min-height: 100vh;
  width: 100%;
  background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url(../images/hero-img.jpg);
  background-position: center;
  background-size: cover;
  position: relative;
}

nav {
  display: flex;
  padding: 2% 6%;
  justify-content: space-between;
  align-items: center;

}

.nav-links {
  flex: 1;
  text-align: right;
 
}

.nav-links ul li {
  list-style: none;
  display: inline-block;
  padding: 8px 12px;
  position: relative;
}

.nav-links ul li a {
  color: #fff;
  text-decoration: none;
  font-size: 16px;
}

.nav-links ul li::after {
  content: "";
  width: 0;
  height: 2px;
  background: #f44336;
  display: block;
  margin: auto;
  transition: 0.5s;
}

.nav-links ul li:hover::after {
  width: 100%
}

#logo {
  float: left;
  font-size: 180%;
  margin-left: 30px;
  color: #fff;
}

.text-box {
  color: #fff;
  width: 90%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.text-box h1 {
  font-size: 62px;
  }

.text-box p {
  color: #fff;
  margin: 10px 0 40px;
  font-size: 24px;
}

.hero-btn {
  display: inline-block;
  text-decoration: none;
  color: #fff;
  border: 1px solid #fff;
  padding: 12px 34px;
  font-size: 13px;
  background: transparent;
  position: relative;
  cursor: pointer;
}

.hero-btn:hover {
  border: 1px solid #f44336;
  background: #f44336;
  transition: 1s;
}

nav .fa {
  display: none;
}

/* top button */


@media(max-width: 700px) {
  .text-box h1 {
    font-size: 25px;
  }

  .text-box p {
    font-size: 15px;
  }

  .nav-links ul li {
    display: block;
  }

  .nav-links {
    position: fixed;
    background: #f44336;
    height: 100vh;
    width: 200px;
    top: 0;
    right: -200px;
    text-align: left;
    z-index: 2;
    transition: 1s;
  }

  nav .fa {
    display: block;
    color: #fff;
    margin: 10px;
    font-size: 22px;
    cursor: pointer;
  }
  .nav-links ul{
    padding: 30px;
  }

  .logo{
    max-width: 130px;
    max-height: 80px;
  }
}
/* ./end nav media */

.heading-line {
	width: 50%;
	margin: auto;
	padding-top: 1%;
	margin-top: 1%;
}
.short-line {
	width: 50%;
	margin: auto;
	padding-bottom: 2%;
	margin-top: 2%;
}

/***** Our Philosophy *****/

h1{
  font-size: 36px;
  font-weight: 600;
  text-align: center;
}


.our-philosophy {
  display: block;
  width: 100%;
 object-fit: cover;
 overflow: hidden;
  margin: auto;
  text-align: center;
  padding: 40px 0;
}

.row-philosophy {
  flex-basis: 48%;
  padding: 10px;
}

.philosophy {
  flex-basis: 48%;
  padding: 10px;
}

.philosophy img {
  width: 100%;
  padding: 20px; 
  text-align: center;
  border-radius: 10px;
}

.philosophy h1 {
  padding-top: 0;
}
.philosophy p {
  padding-top: 15px 0 25px;
}

@media(max-width: 700px) {
  .row {
    flex-direction: column;
}
}

/***** Services *****/

.services{
  height: 100%;
  width: 100%;
  margin: auto;
  text-align: center;
  padding: 80px 0;
  background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)), url(../images/services-banner.jpg);
  background-position: center center;
  background-size: cover;
  position: relative;
}

.custom-title {
  font-size: 36px;
  font-weight: 600;
  color:#fff;
}


.row-sevice {
  margin: 5%;
  display: flex;
  justify-content: space-between;
}

.services-title{
  text-align: center;
  font-weight: 600;
  margin: 10px 0;
}

.services-cols {
  flex-basis: 31%;
  color: #fff;
  background: #80bad6f2;
  border-radius: 10px;
  margin-bottom: 5%;
  padding: 20px 12px;
  box-sizing: border-box;
  transition: 0.5s;
}
.services-cols p{
  color: black;
}

.services-cols:hover {
  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);

}
.service-btn {
  display: inline-block;
  text-decoration: none;
  color: #fff;
  border: 2px solid #0062cc;
  padding: 12px 34px;
  font-size: 15px;
  background: transparent;
  position: relative;
  cursor: pointer;
}

.service-btn:hover {
  border: 1px solid #f44336;
  background: #f44336;
  transition: 1s;
}
@media(max-width: 800px) {
  .row-sevice {
    flex-direction:column;
  }
}



/*Gallery*/

.gallery {
  height:100%
  margin: 4em 0;
  position: relative;
  padding-top: 60px;
  padding-bottom: 150px;
}

.gallery h1 {
  color: #555;
  margin: 0 0 8px;
}

.gallery img {
  height: 14rem;
  width: 100%;
  border-radius: 10px;
  margin: 1em;
  object-fit: cover;
}

#gallery img {
  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
  object-fit: cover;
  overflow:hidden;
}



/* contact form */
.contact-form {
  height: 100%;
  text-align: center;
  width: 100%;
  padding-top: 40px;
  padding-bottom: 40px;
  margin: auto;
  background-image: linear-gradient(rgba(4, 9, 30, 0.2), rgba(4, 9, 30, 0.2)), url(../images/contact-us.jpg);
  background-position: center center;
  background-size: cover;
  position: relative;
 }


.contact-form h1 {
  font-size: 36px;
  font-weight: 600;
  padding: 20px 0 10px 0;
}


.contact-form div {
    padding: 10px;
}

.form-input {
    width: 100%;
    padding: 5px;
    border-radius: 3px 3px;
}

.content {
  text-align: center;
}

input[type=text]:focus {
    outline-color: #f44336;
}

input[type=email]:focus {
    outline-color: #f44336;
}

#contact-us {
  margin: 50px 0;
}

#contact-us h3 {
  padding-top: 50px;
  text-align: left;
}

#contact-us p {
  margin: 20px 0;
  padding: 20px;
  text-align: left;
}

.map-location {
  padding: 20px;
  margin-top: auto;
} 
.contact-form {
  height: 100%;
}

.contact-form textarea {
  height: auto;
}


/* media query */
@media only screen and (min-width: 768px) {
  .form-input {
      width: 33%;
  }

  .contact-form {
      padding: 20px;
  }
}

@media screen and (max-width: 425px) {
  iframe {
      height: 250px;
      width: 250px;
  }
}




/* footer */

footer {
  background-color: rgb(37, 34, 34); 
}

.social-networks {
  text-align: center;
}

.social-networks > li {
  display: inline;
}

.social-networks i {
  font-size: 140%;
  margin: 1%;
  padding: 5%;
  color: #fff;
}
.social-networks i:hover{
  color:#f44336;
}
footer p {
  text-align: center;
  color: inherit;
  padding: 0;
  margin: 0 auto;
}

